[package]
name = "mpass"
version = "0.6.1"
authors = ["Daniil Smirnov <danslapman@gmail.com>"]

[dependencies]
clap = "2.32"
rust-crypto = "^0.2"
rustc-serialize = "0.3"
bincode = "0.9"
yaml-rust = "0.4"
rand = "0.3"
mdo = "^0.3"
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
dirs = "1.0.4"